[gd_scene load_steps=7 format=2]

[ext_resource path="res://overlap/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/StoneGolem/Mecha-stone Golem 0.1/weapon PNG/arm_projectile_glowing.png" type="Texture" id=2]
[ext_resource path="res://Projectile/StoneGolemSpear.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.375, 2 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "start"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 3, 5, 3 ]
}

[node name="StoneGolemSpear" groups=["Projectile"] instance=ExtResource( 1 )]
collision_layer = 32
collision_mask = 3
script = ExtResource( 3 )
damage = 30
SPEED = 100

[node name="Sprite" type="Sprite" parent="." index="0"]
rotation = 3.14159
texture = ExtResource( 2 )
hframes = 6
vframes = 4
frame = 3

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -1.375, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
autoplay = "start"
anims/RESET = SubResource( 2 )
anims/start = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="3"]
position = Vector2( -2, -2.98023e-08 )
scale = Vector2( 1.75, 0.75 )

[connection signal="area_entered" from="." to="." method="_on_StoneGolemSpear_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_StoneGolemSpear_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
